[package]
name = "dropspace_sale"
version = "0.1.0"
edition = "2021"
authors = ["Mike Gold"]

[dependencies]

ink = { version = "4.2.1", default-features = false }
ink_prelude = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# Include brush as a dependency and enable default implementation for PSP22 via brush feature
openbrush = { tag = "4.0.0", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp3", "ownable"] }

[lib]
name = "dropspace_sale"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]

psp37 = ["openbrush_contracts/psp37"]

ink-as-dependency = [] 